<resources>
    <string name="app_name">Perpus</string>
    <string name="id_buku">ID Buku</string>
    <string name="nama">Nama Buku</string>
    <string name="penulis">Penulis Buku</string>
    <string name="penerbit">Penerbit Buku</string>
    <string name="tahun">Tahun Terbit</string>
    <string name="submit">Submit</string>
    <string name="header">Form Pendaftaran Buku Perpustakaan</string>
</resources>
